# mc_con_ctrl

./: .gitignore  .pre-commit-config.yaml  README.md  config.json  data.sqlite  main.py  pyproject.toml
docs/: README.md  _config.yml
mc_con_ctrl/: commands.py  config.py  console.py  minecraft.py
src/mc_console_ctrl/: __init__.py  commands.py  console.py  logger.py  main.py  minecraft.py
